<resources>
    <string name="app_name">YBU</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">sonraki</string>
    <string name="skip">geç</string>
    <string name="start">Giriş Yap</string>
    <string name="start_signup">Kayıt ol</string>

    <string name="slide_1_title">Hoşgeldiniz!</string>
    <string name="slide_1_desc">Üniversiteden tüm haberler burada!</string>

    <string name="slide_2_title">Bildirimler!</string>
    <string name="slide_2_desc">Ayrıca uygulama sayesinde ilgi alanlarını seçip tüm bildirimleri alabileceksin!</string>
    <string name="slide_3_title">Yemek Listesi de burada :)</string>
    <string name="slide_3_desc">Yemekhanede çıkan yemekleri günlük olarak takip edebilirsin!</string>

    <string name="slide_4_title">O zaman başlayalım :)</string>
    <string name="slide_4_desc">İlk önce giriş yapman hesabın yoksa kayıt olman gerekecek bunun için okul emailini kullanmalısın!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="already_have_an_account_sign_in">Zaten hesabınız var mı? Giriş Yapın..</string>
    <string name="create_account">HESAP OLUŞTUR</string>
    <string name="Continue">Devam Et</string>
    <string name="okulnumarası">Okul Numarası</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="no_account_yet_create_one">Hesabınız yok mu? Hemen oluşturun..</string>
    <string name="sign_in">Giriş</string>
    <string name="title_activity_duyuru">Duyurular</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
